# mes-extra

./: .gitignore  package-lock.json  package.json
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/cmds/: Cargo.toml
src-tauri/cmds/src/: aync_tables.rs  configs.rs  datasource.rs  lib.rs
src-tauri/common/: Cargo.toml
src-tauri/common/src/: constants.rs  lib.rs  utils.rs
src-tauri/common/src/models/input/: mod.rs
src-tauri/common/src/models/output/: mod.rs
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: connection_config.rs  lib.rs  prelude.rs  sync_table_columns_info.rs  sync_tables.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20240921_000001_columns_info_table.rs  m20240921_000001_sync_tables_table.rs  main.rs
src-tauri/src/: cmd.rs  main.rs
src/lib/: schema.ts
src/lib/components/: MenuCommand.svelte  ModelWatcher.svelte  SettingsForm.svelte  SettingsInfo.svelte
src/lib/helper/: utils.ts
src/lib/stores/: configs.ts  db.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/export/: +page.svelte  FlowExport.svelte
src/routes/query/: +page.svelte
