[package]
name = "cmds"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = {path ="../entity"}
common = {path ="../common"}

serde = { version = "1.0.204", features = ["derive"] }
oracle = "0.6.2"
xlsxwriter = "0.6.1"
chrono = "0.4.38"
tokio = {version="1.40.0", features=['macros']}



[dependencies.sea-orm]
version = "0.12.15" # sea-orm version
features = [
    "debug-print",
    # "runtime-tokio-native-tls",
    "runtime-tokio-rustls",
    # "sqlx-postgres",
    # "sqlx-mysql",
    "sqlx-sqlite",
]
